Skip to content

Restoring speed to normal

After having sped up or slowed down playback of a video, I often want to restore it to its normal speed. The only way right now is hitting the 'slow down' or 'speed up' button the correct number of times, which is annoying. A single button that resets the video's speed to default would be nice (similar to mplayer's backspace button).

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information