gui/macosx: Added menu item to set playback rate back to normal

Close #1122

Signed-off-by: Felix Paul Kühne <fkuehne@videolan.org>